--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "marked": "^0.3.5"
   },
   "devDependencies": {
+    "ajax": "0.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-proxy": "^1.0.6",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "express": "^4.13.4",
+    "marked": "^0.3.5",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   },
